--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "Thorazine\\Location\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "^6.3"
+    }
 }
