updated to automatic composer install

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,15 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^6.0"
-    }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Thorazine\\Location\\LocationServiceProvider"
+            ],
+            "aliases": {
+                "Location": "Thorazine\\Location\\Facades\\LocationFacade"
+            }
+        }
+    },
 }
