--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Matthijs Openneer",
-            "email": "noreply@matthijs.openneer.com"
+            "name": "Thorazine",
         }
     ],
     "autoload": {
