--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Thorazine",
+            "name": "Thorazine"
         }
     ],
     "autoload": {
